--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vocaboost",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "description": "A vocabulary learning application",
   "main": "src/index.js",
   "scripts": {
@@ -46,6 +47,6 @@
     ]
   },
   "engines": {
-    "node": "18.x"
+    "node": "16.x"
   }
 }
